# paymeskill

./: .gitignore  Cargo.toml  README.md
.claude/: .mcp.json  settings.json
.claude/agents/: apple-style-ui-designer.md
.claude/skills/docs-check/: SKILL.md
.codx/skills/: README.md
.codx/skills/payloadexchange-operator/: SKILL.md
.codx/skills/payloadexchange-operator/agents/: openai.yaml
docs/: README.md  SUMMARY.md  book.json  package.json  pnpm-lock.yaml
docs/styles/: website.css
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  styles.css
migrations/: 0003_task_completions.sql  0004_payments.sql  0005_creator_events.sql
skills/: README.md
skills/payloadexchange-operator/: SKILL.md
skills/payloadexchange-operator/agents/: openai.yaml
src/: error.rs  main.rs  types.rs  utils.rs
